# xnetcdf

./: .readthedocs.yaml  LICENSE.txt  README.md  environment.yml  pyproject.toml
.github/workflows/: build-and-deploy-on-pypi.yml  install-from-conda.yml  pytest.yml
docs/source/: conf.py  index.rst  installation.rst  introduction.rst  netcdf_structure.rst  quickstart.rst
src/xnetcdf/: xnetcdf.py
src/xnetcdf/utils/: utils_umfive.py
tests/: test_api.py  test_backends.py
xnetcdf/: __init__.py  xnetcdf.py
xnetcdf/utils/: __init__.py
