[build-system]
requires = [
    "setuptools>=80",
    "setuptools_scm>=8",
]
build-backend = "setuptools.build_meta"

[project]
name = "xnetcdf"
version = "0.1.0"
description = "TODO"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Xnetcdf Development Team", email = "valeriu.predoi@ncas.ac.uk"},
    {name = "Valeriu Predoi", email = "valeriu.predoi@ncas.ac.uk"},
    {name = "David Hassell", email = "david.hassell@ncas.ac.uk"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=2.0.0",
    "netCDF4!=1.7.4",
    "dask",
    "fsspec",
    "h5py",
    "scipy",
    "pyfive>=1.1.1",
    "umfive>=0.2.2",
    "zarr>=3.1.3",
    "xarray",
]

[project.optional-dependencies]
test = [
    "h5netcdf",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-html",
    "pytest-xdist",
]
docs = [
    "autodocsumm",
    "sphinx",
    "furo",
]

[project.urls]
Code = "https://github.com/NCAS-CMS/xnetcdf"
Issues = "https://github.com/NCAS-CMS/xnetcdf/issues"

[tool.setuptools]
packages = ["xnetcdf"]

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}

[tool.setuptools_scm]
version_scheme = "release-branch-semver"

[tool.pytest.ini_options]
addopts = [
    "--cov-report=xml:test-reports/coverage.xml",
    "--cov-report=html:test-reports/coverage_html",
    "--html=test-reports/report.html",
]

# [tool.coverage.run]
# parallel = true
# source = ["xnetcdf"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
]
ignore = [
    # these should not be fixed
    "F401",      # unused imports: some are really needed
    "F841",      # unused variables: some are really needed
    # we may want to fix these
    "E721",      # type comparison issues (2 errors)
    "F811",      # redefined while unused (1 error)
    "E722",      # bare except (1 error)
    "E711",      # None comparison (1 error)
]
future-annotations = true

[tool.ruff.lint.pycodestyle]
max-line-length = 150

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
ignore-fully-untyped = true
# turn these on at a later stage
# [tool.ruff.lint.isort]
# known-first-party = ["xnetcdf"]
# [tool.ruff.lint.pydocstyle]
# convention = "numpy"
# [tool.ruff.lint.pylint]
# max-args = 7

[tool.mypy]
# See https://mypy.readthedocs.io/en/stable/config_file.html
ignore_missing_imports = true
enable_error_code = [
    "truthy-bool",
]
